# ocf-template

./: .pre-commit-config.yaml  .ruff.toml  Containerfile  README.md  environment.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: branch_ci.yml  linters.yaml  merged_ci.yml
src/: __init__.py
src/ocf_template/: __init__.py  main.py
tests/: test_something.py
